--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-sortablejs": "^6.1.4",
     "redux": "5.0.1",
     "rollup": "^4.22.4",
     "simplebar-react": "^3.2.4",
